--- a/Schematics/OHDSP-ADAU1701.cmp
+++ b/Schematics/OHDSP-ADAU1701.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (after 2015-mar-04 BZR unknown)-product   date = 30/03/2015 16:07:08
+Cmp-Mod V01 Created by Cvpcb (after 2015-mar-04 BZR unknown)-product   date = 31/03/2015 10:11:09
 
 BeginCmp
 TimeStamp = /54BE4270/55162042;
@@ -19,13 +19,6 @@ TimeStamp = /54BE4270/55165020;
 Reference = C203;
 ValeurCmp = 220u;
 IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D6.3mmP2.5mm;
-EndCmp
-
-BeginCmp
-TimeStamp = /54BE4270/54DAC79D;
-Reference = C204;
-ValeurCmp = 100p;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
 BeginCmp
@@ -169,13 +162,6 @@ IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
 BeginCmp
-TimeStamp = /54BE4270/54DB1F51;
-Reference = C225;
-ValeurCmp = 100p;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
 TimeStamp = /54BE4270/54EA1193;
 Reference = C226;
 ValeurCmp = 100n;
@@ -228,13 +214,6 @@ BeginCmp
 TimeStamp = /54BE4270/54DB1F72;
 Reference = C233;
 ValeurCmp = 100n;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
-TimeStamp = /54BE4270/54DB2FE0;
-Reference = C234;
-ValeurCmp = 100p;
 IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
@@ -568,23 +547,9 @@ IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D6.3mmP2.5mm;
 EndCmp
 
 BeginCmp
-TimeStamp = /54E20ECF/5514C504;
-Reference = C401;
-ValeurCmp = 33p;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
 TimeStamp = /54E20ECF/5514C50B;
 Reference = C402;
-ValeurCmp = 33p;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
-TimeStamp = /54E20ECF/54E607CC;
-Reference = C403;
-ValeurCmp = 100p;
+ValeurCmp = 100n;
 IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
@@ -620,27 +585,6 @@ BeginCmp
 TimeStamp = /54E20ECF/551611CD;
 Reference = C408;
 ValeurCmp = 22u;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
-TimeStamp = /54E20ECF/5515C3B8;
-Reference = C409;
-ValeurCmp = 100n;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
-TimeStamp = /54E20ECF/5515C3BE;
-Reference = C410;
-ValeurCmp = 22u;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
-TimeStamp = /54E20ECF/5515C3A6;
-Reference = C411;
-ValeurCmp = 100p;
 IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
@@ -1023,13 +967,6 @@ IdModule  = OHDSP-Footprints-Pretty:CONN_SIL_2;
 EndCmp
 
 BeginCmp
-TimeStamp = /54BE4270/54DAC7A4;
-Reference = R201;
-ValeurCmp = 47R;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
 TimeStamp = /54BE4270/54DEAEEA;
 Reference = R202;
 ValeurCmp = 47R;
@@ -1100,13 +1037,6 @@ IdModule  = OHDSP-Footprints-Pretty:SMD-1206;
 EndCmp
 
 BeginCmp
-TimeStamp = /54BE4270/54DB1F57;
-Reference = R212;
-ValeurCmp = 47R;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
 TimeStamp = /54BE4270/55149354;
 Reference = R213;
 ValeurCmp = 0R;
@@ -1152,13 +1082,6 @@ BeginCmp
 TimeStamp = /54BE4270/5515B697;
 Reference = R219;
 ValeurCmp = 100k;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
-TimeStamp = /54BE4270/54DB2FE6;
-Reference = R220;
-ValeurCmp = 47R;
 IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
@@ -1401,13 +1324,6 @@ IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
 BeginCmp
-TimeStamp = /54E20ECF/55159D50;
-Reference = R402;
-ValeurCmp = 1Meg;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
 TimeStamp = /54E20ECF/5514C537;
 Reference = R403;
 ValeurCmp = N/F;
@@ -1417,35 +1333,21 @@ EndCmp
 BeginCmp
 TimeStamp = /54E20ECF/5514C4FD;
 Reference = R404;
-ValeurCmp = 100R;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
-TimeStamp = /54E20ECF/54E607CD;
-Reference = R405;
-ValeurCmp = 47R;
+ValeurCmp = 1k;
 IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
 BeginCmp
 TimeStamp = /54E20ECF/5515D7E4;
 Reference = R406;
-ValeurCmp = 0R;
+ValeurCmp = N/F;
 IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
 BeginCmp
 TimeStamp = /54E20ECF/5515D6C5;
 Reference = R407;
-ValeurCmp = 0R;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
-TimeStamp = /54E20ECF/54E213CA;
-Reference = R408;
-ValeurCmp = 0R;
+ValeurCmp = 27R;
 IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
@@ -1459,14 +1361,7 @@ EndCmp
 BeginCmp
 TimeStamp = /54E20ECF/5515FCEF;
 Reference = R410;
-ValeurCmp = 100R;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
-TimeStamp = /54E20ECF/5515C3AC;
-Reference = R411;
-ValeurCmp = 47R;
+ValeurCmp = N/F;
 IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
@@ -1940,6 +1835,20 @@ IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
 BeginCmp
+TimeStamp = /54E8D6A6/551C635D;
+Reference = R560;
+ValeurCmp = 0R;
+IdModule  = OHDSP-Footprints-Pretty:SMD-1206;
+EndCmp
+
+BeginCmp
+TimeStamp = /54E8D6A6/551C6570;
+Reference = R561;
+ValeurCmp = 0R;
+IdModule  = OHDSP-Footprints-Pretty:SMD-1206;
+EndCmp
+
+BeginCmp
 TimeStamp = /54BE4270/54DEF588;
 Reference = SW201;
 ValeurCmp = SWITCH;
@@ -2038,20 +1947,6 @@ IdModule  = OHDSP-Footprints-Pretty:IC-SOT23-5;
 EndCmp
 
 BeginCmp
-TimeStamp = /54E20ECF/551594F1;
-Reference = U401;
-ValeurCmp = NC7SZU04M5X;
-IdModule  = OHDSP-Footprints-Pretty:IC-SOT23-5;
-EndCmp
-
-BeginCmp
-TimeStamp = /54E20ECF/5515AB8B;
-Reference = U402;
-ValeurCmp = NC7SZU04M5X;
-IdModule  = OHDSP-Footprints-Pretty:IC-SOT23-5;
-EndCmp
-
-BeginCmp
 TimeStamp = /54E20ECF/54E2112F;
 Reference = U403;
 ValeurCmp = NB3L553;
@@ -2059,10 +1954,10 @@ IdModule  = OHDSP-Footprints-Pretty:IC_SOIC_8;
 EndCmp
 
 BeginCmp
-TimeStamp = /54E20ECF/5514C4F6;
-Reference = X401;
-ValeurCmp = 24M576;
-IdModule  = OHDSP-Footprints-Pretty:XTAL_HC49_TH;
+TimeStamp = /54E20ECF/551A731F;
+Reference = XTAL401;
+ValeurCmp = XTAL-OSC-4PIN;
+IdModule  = OHDSP-Footprints-Pretty:XTAL_8_DIL;
 EndCmp
 
 EndListe
